@@ -20,8 +20,8 @@
 #'
 #' This function will create a dialog section with optional child nodes "browser", "checkbox",
 #' "column", "copy", "dropdown", "embed", "formula", "frame", "include", "input", "insert",
-#' "preview", "radio", "row", "saveobject", "spinbox", "stretch", "tabbook", "text", "valueselector",
-#' "valueslot", "varselector" and "varslot".
+#' "preview", "radio", "row", "saveobject", "select", "spinbox", "stretch", "tabbook", "text",
+#' "valueselector", "valueslot", "varselector" and "varslot".
 #'
 #' @param ... Objects of class \code{XiMpLe.node}.
 #' @param label Character string, a text label for this plugin element.
