@@ -12,7 +12,8 @@ rk.XML.dropdown(label, options = list(label = c(val = "", chk = FALSE)),
 \item{options}{A named list with options to choose from. The names of the list elements will become
 labels of the options, \code{val} defines the value to submit if the option is checked,
       and
-\code{chk=TRUE} should be set in the one option which is checked by default.}
+\code{chk=TRUE} should be set in the one option which is checked by default. Objects generated with
+\code{\link[rkwarddev:rk.XML.option]{rk.XML.option}} are accepted as well.}
 
 \item{id.name}{Character string, a unique ID for this plugin element.
 If \code{"auto"} and a label was provided,
