@@ -16,6 +16,7 @@
     \itemize{
       \item new functions \code{rk.XML.valueselector()},  \code{rk.XML.valueslot()} and the combining \code{rk.XML.values()} to define
         <valueselector> and <valueslot> nodes, similar to \code{rk.XML.varselector()},  \code{rk.XML.varslot()} and \code{rk.XML.vars()}
+      \item new function \code{rk.XML.select()} to define <select> nodes
       \item new functions \code{rk.set.rkh.prompter()} and \code{rk.get.rkh.prompter()} to make it easier to generate help files
         (later...)
       \item \code{rk.rkh.scan()} (and automatically \code{rk.plugin.skeleton()} and \code{rk.plugin.component()}) are now capable of fetching
@@ -28,6 +29,8 @@
   \subsection{changed}{
     \itemize{
       \item updated the plugin skeleton example script; e.g., it now uses the new .rkh file generating features
+      \item \code{rk.XML.radio()} and \code{rk.XML.dropdown()} now also accept objects made with \code{rk.XML.option()} in their respective
+        list of options
     }
   }
 }
